--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
   "version": "11.5.0",
-  "registry": "https://registry.npmjs.org/",
+  "registry": "http://localhost:4873",
   "npmClient": "pnpm",
   "$schema": "node_modules/lerna/schemas/lerna-schema.json"
 }
